# DFA_algorithms

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  LightweightParsingCMD.hpp  TextTable.h  bin_algo.cpp  emptiness.cpp  emptiness_bfs.cpp  emptiness_dfs.cpp  lab1.cpp  test.txt  test_dfs.txt
apps/include/: LightweightParsingCMD.hpp  TextTable.h  emptiness_cmd_helper.hpp
doxygen/: Doxyfile
doxygen/html/: _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _lightweight_parsing_c_m_d_8hpp.html  _lightweight_parsing_c_m_d_8hpp_source.html  _r_e_a_d_m_e_8md.html  _target_directories_8txt.html  _text_table_8h.html  _text_table_8h_source.html  annotated.html  apps_2_c_make_files_2emptiness__bfs_8dir_2link_8txt.html  apps_2_c_make_files_2emptiness__dfs_8dir_2link_8txt.html  apps_2_c_make_lists_8txt.html  apps_2test_8txt.html  buchi_8cpp.html  buchi_8hpp.html  buchi_8hpp_source.html  class_nondeterministic.html  class_text_table-members.html  class_text_table.html  classautomates_1_1buchi-members.html  classautomates_1_1buchi.html  classautomates_1_1inv__buchi-members.html  classautomates_1_1inv__buchi.html  classes.html  clion-environment_8txt.html  clion-log_8txt.html  converters_8cpp.html  converters_8hpp.html  converters_8hpp_source.html  dir_0120a20ab1f54bc8e9b9ef9de59bf19a.html  dir_0a0d5da700a5a4a1bb9e31860c7b5987.html  dir_154c47e631b6a824f0dd3a575249b776.html  dir_212b541d30500b369343a430331ea3f8.html  dir_247c9eba0c420962286e8bd2a154537b.html  dir_2bd49169d5975c17d80693e2613d8110.html  dir_2c013f83b830bf46e75fa9827b165196.html  dir_317426a4f00b77f525951bcd0b26e313.html  dir_344f037151c9c4fb744ef979d3688032.html  dir_36b79149b6f1d4d670f8bac087f560ef.html  (+132 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  (+67 more)
doxygen/latex/: _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_cache_8txt.tex  _c_make_lists_8txt.tex  _lightweight_parsing_c_m_d_8hpp.tex  _text_table_8h.tex  annotated.tex  apps_2_c_make_files_2emptiness__bfs_8dir_2link_8txt.tex  apps_2_c_make_files_2emptiness__dfs_8dir_2link_8txt.tex  apps_2_c_make_lists_8txt.tex  apps_2test_8txt.tex  buchi_8cpp.tex  buchi_8hpp.tex  class_nondeterministic.tex  class_text_table.tex  classautomates_1_1buchi.eps  classautomates_1_1buchi.tex  classautomates_1_1inv__buchi.eps  classautomates_1_1inv__buchi.tex  converters_8cpp.tex  converters_8hpp.tex  dir_0120a20ab1f54bc8e9b9ef9de59bf19a.tex  dir_0a0d5da700a5a4a1bb9e31860c7b5987.tex  dir_154c47e631b6a824f0dd3a575249b776.tex  dir_212b541d30500b369343a430331ea3f8.tex  dir_247c9eba0c420962286e8bd2a154537b.tex  dir_2bd49169d5975c17d80693e2613d8110.tex  dir_2c013f83b830bf46e75fa9827b165196.tex  dir_317426a4f00b77f525951bcd0b26e313.tex  dir_344f037151c9c4fb744ef979d3688032.tex  dir_36b79149b6f1d4d670f8bac087f560ef.tex  dir_4ff02abe51f486cd3c89ead5087aac6a.tex  dir_650bf6b828d4d227c58f4c0002b7d138.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_712ca5f1616261472fee79278e88ee05.tex  dir_7788a88e8c67b90f501f49cceaed6b60.tex  dir_811b5fdad38ae5b35e2ca3d3416fd15c.tex  dir_8b0166df01791db4ae5c67520e04a6a8.tex  dir_8e05c231a6f3bcbe6ed1a789f2ec9a1e.tex  dir_95e29a8b8ee7c54052c171a88bb95675.tex  dir_9654b8d08f4bba4e84b362c5fd320bee.tex  (+64 more)
include/: binary_algo.hpp
include/automaton/automates/: _nfa.hpp  buchi.hpp  dfa.hpp  finite_automaton.hpp  inv_buchi.hpp  nfa.hpp
include/automaton/utils/: converters.hpp  generator.hpp  representation.hpp
include/binary_algo/: binary_algo.hpp
include/emptiness_check/: statistic.hpp
include/emptiness_check/bfs/: emerson.hpp  modified_emerson.hpp
include/emptiness_check/dfs/: nested.hpp  two_stack.hpp
include/utils/: automaton.hpp  converters.hpp
src/: CMakeLists.txt  automaton.cpp  binary_algo.cpp
src/automaton/: converters.cpp
src/automaton/automates/: _nfa.cpp  buchi.cpp  dfa.cpp  inv_buchi.cpp  nfa.cpp
src/automaton/utils/: converters.cpp  generator.cpp  representation.cpp
src/binary_algo/: binary_algo.cpp
src/emptiness_check/: statistic.cpp
src/emptiness_check/bfs/: emerson.cpp  modified_emerson.cpp
src/emptiness_check/dfs/: nested.cpp  two_stack.cpp
src/utils/: automaton.cpp  converters.cpp
